--- a/.md
+++ b/.md
@@ -40,6 +40,7 @@ If you have spotted or written something about Node.js, do come over to our [Eva
 * [NodeFest](http://nodefest.jp/2015/), November 7th at Tokyo, Japan
 * [Nodevember](http://nodevember.org/?utm_source=io.js+and+Node.js+News&utm_medium=article), November 14th - 15th at Nashville, Tennessee, US.
 * [NodeConf Barcelona](https://ti.to/barcelonajs/nodeconf-barcelona-2015), November 21st at Barcelona, Spain
+* [Campjs](http://vi.campjs.com), November 20 – 23th at Queensland, Australia
 * [Playnode](https://playnode.io), November, Korea
 * [Node.js Interactive](http://events.linuxfoundation.org/events/node-interactive), December 8-9 at Portland, US.
 
